# BA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ransac_evaluation_results.csv  ransac_evaluation_results2.csv  ransac_evaluation_results_correlations_0602.csv
cmake/: Dependencies.cmake
fbuild/: CTestTestfile.cmake  GraphicsProject  GraphicsProject_tests  GraphicsProject_tests[1]_include.cmake  GraphicsProject_tests[1]_tests.cmake  compile_commands.json  imgui.ini  ransac_evaluation_results.csv  ransac_evaluation_results_new2.csv  ransac_evaluation_results_new3.csv  ransac_evaluation_results_new4.csv  ransac_evaluation_results_new5.csv
include/: Definitions.h  Generation.h  Generation.tpp  Regression.h  Visualize.h
include/core/: data_loader.hpp  flat_averager.hpp  flat_model.hpp  flat_sampler.hpp  generation.h  image_loader.hpp  model.hpp  ransac.hpp  ransac.tpp
include/evaluation/: evaluator.hpp
include/models/: affine_fit.hpp  huber_regression.hpp  mean_sdf.hpp  median_sdf.hpp  ols.hpp
include/visualization/: visualizer.h
sbuild/: CTestTestfile.cmake  GraphicsProject_tests[1]_include.cmake  GraphicsProject_tests[1]_tests.cmake  compile_commands.json  imgui.ini  ransac_evaluation_results.csv
sbuild/Testing/Temporary/: CTestCostData.txt
src/: CMakeLists.txt  Generation.cpp  Regression.cpp  main.cpp
src/core/: flat_averager.cpp  flat_model.cpp  flat_sampler.cpp  generation.cpp  image_loader.cpp  model.cpp  ransac.cpp
src/evaluation/: evaluator.cpp
src/graphics/: Graphics.cpp
src/models/: affine_fit.cpp  huber_regression.cpp  mean_sdf.cpp  median_sdf.cpp  ols.cpp
src/visualization/: visualizer.cpp
tests/: test_flat_orientation_invariance.cpp  test_orthonormalization.cpp  test_representation_conversion.cpp
